[gd_scene load_steps=3 format=3 uid="uid://e2yr7nu40f0e"]

[ext_resource type="Script" uid="uid://icdviasdqo63" path="res://start_button.gd" id="1_tqs16"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhk71"]
size = Vector2(189, 45)

[node name="StartButton" type="Area2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource("1_tqs16")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 189.0
offset_bottom = 45.0

[node name="Label" type="Label" parent="."]
offset_right = 189.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Start Game?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(94.5, 22.5)
shape = SubResource("RectangleShape2D_xhk71")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
